@@ -1,81 +1,0 @@
-program	num_tracks	island_base	island_lst	mem_per_obs	cpu_per_obs
-gmtkEMtrainNew	1	0	0	1553	1.42857142857e-05
-gmtkEMtrainNew	2	0	0	6210	2e-05
-gmtkEMtrainNew	3	0	0	3685	2.5e-05
-gmtkEMtrainNew	4	0	0	1806	3.33333333333e-05
-gmtkEMtrainNew	5	0	0	5886	3.33333333333e-05
-gmtkEMtrainNew	6	0	0	3035	5e-05
-gmtkEMtrainNew	7	0	0	5885	5e-05
-gmtkEMtrainNew	8	0	0	3949	5e-05
-gmtkEMtrainNew	9	0	0	4144	5e-05
-gmtkEMtrainNew	10	0	0	5663	6.66666666667e-05
-gmtkEMtrainNew	11	0	0	4182	6.66666666667e-05
-gmtkEMtrainNew	12	0	0	6109	6.66666666667e-05
-gmtkEMtrainNew	13	0	0	5907	7.5e-05
-gmtkEMtrainNew	14	0	0	3381	7e-05
-gmtkEMtrainNew	15	0	0	6219	7.77777777778e-05
-gmtkEMtrainNew	16	0	0	4177	7.77777777778e-05
-gmtkEMtrainNew	17	0	0	3948	0.0001
-gmtkEMtrainNew	18	0	0	4045	0.0001
-gmtkEMtrainNew	19	0	0	8347	0.0001
-gmtkEMtrainNew	20	0	0	5575	0.0001
-gmtkEMtrainNew.bundle	1	0	0	0	0.0
-gmtkEMtrainNew.bundle	2	0	0	0	0.0
-gmtkEMtrainNew.bundle	3	0	0	0	0.0
-gmtkEMtrainNew.bundle	4	0	0	0	0.0
-gmtkEMtrainNew.bundle	5	0	0	0	0.0
-gmtkEMtrainNew.bundle	6	0	0	0	0.0
-gmtkEMtrainNew.bundle	7	0	0	0	0.0
-gmtkEMtrainNew.bundle	8	0	0	0	0.0
-gmtkEMtrainNew.bundle	9	0	0	0	0.0
-gmtkEMtrainNew.bundle	10	0	0	0	0.0
-gmtkEMtrainNew.bundle	11	0	0	0	0.0
-gmtkEMtrainNew.bundle	12	0	0	0	0.0
-gmtkEMtrainNew.bundle	13	0	0	0	0.0
-gmtkEMtrainNew.bundle	14	0	0	0	0.0
-gmtkEMtrainNew.bundle	15	0	0	0	0.0
-gmtkEMtrainNew.bundle	16	0	0	0	0.0
-gmtkEMtrainNew.bundle	17	0	0	0	0.0
-gmtkEMtrainNew.bundle	18	0	0	0	0.0
-gmtkEMtrainNew.bundle	19	0	0	0	0.0
-gmtkEMtrainNew.bundle	20	0	0	61640541	0.0
-gmtkJT	1	0	0	3665	2e-05
-gmtkJT	2	0	0	3613	2.5e-05
-gmtkJT	3	0	0	3339	2.5e-05
-gmtkJT	4	0	0	5907	5e-05
-gmtkJT	5	0	0	4145	3.33333333333e-05
-gmtkJT	6	0	0	3776	3.33333333333e-05
-gmtkJT	7	0	0	3943	3.33333333333e-05
-gmtkJT	8	0	0	3943	3.33333333333e-05
-gmtkJT	9	0	0	2481	5e-05
-gmtkJT	10	0	0	5492	5e-05
-gmtkJT	11	0	0	8350	4e-05
-gmtkJT	12	0	0	6217	5e-05
-gmtkJT	13	0	0	4175	5e-05
-gmtkJT	14	0	0	4175	5e-05
-gmtkJT	15	0	0	3154	5e-05
-gmtkJT	16	0	0	4101	5e-05
-gmtkJT	17	0	0	3945	5e-05
-gmtkJT	18	0	0	4150	5e-05
-gmtkJT	19	0	0	5883	5e-05
-gmtkJT	20	0	0	5884	5e-05
-gmtkViterbiNew	1	0	0	3224	5.66666666667e-05
-gmtkViterbiNew	2	0	0	3750	0.0001
-gmtkViterbiNew	3	0	0	4689	0.000118
-gmtkViterbiNew	4	0	0	5948	0.00015
-gmtkViterbiNew	5	0	0	6903	0.000181666666667
-gmtkViterbiNew	6	0	0	7991	0.000215
-gmtkViterbiNew	7	0	0	9363	0.000244
-gmtkViterbiNew	8	0	0	10350	0.000278333333333
-gmtkViterbiNew	9	0	0	11416	0.000308
-gmtkViterbiNew	10	0	0	20000	0.000348333333333
-gmtkViterbiNew	11	0	0	13683	0.00038
-gmtkViterbiNew	12	0	0	14576	0.000411666666667
-gmtkViterbiNew	13	0	0	15917	0.000448333333333
-gmtkViterbiNew	14	0	0	16758	0.000483333333333
-gmtkViterbiNew	15	0	0	18081	0.000516666666667
-gmtkViterbiNew	16	0	0	19305	0.000575
-gmtkViterbiNew	17	0	0	20352	0.000586666666667
-gmtkViterbiNew	18	0	0	21497	0.0006325
-gmtkViterbiNew	19	0	0	22549	0.000656666666667
-gmtkViterbiNew	20	0	0	23529	0.000696666666667
