@@ -8,6 +8,7 @@
 * segway: eliminate core dumps of jobs in LSF
 * segway: make job abnormal error handling more robust
 * segway: add log/details.sh to give all details of queued commands
+* segway: changed way GMTK model is specified for speedup
 * docs updates
 
 0.1.14:
